--- a/Libary/Libary.csproj
+++ b/Libary/Libary.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Async.cs" />
     <Compile Include="DatabaseOperations.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
